@@ -10,6 +10,7 @@
 - compat-30: New function =merge-ordered-lists=.
 - compat-30: New variables =completion-lazy-hilit= and =completion-lazy-hilit-fn=
   and new function =completion-lazy-hilit=.
+- compat-30: New function =require-with-check=.
 
 * Release of "Compat" Version 29.1.4.4
 
